--- a/wokrs/css/ltlh-register.css
+++ b/wokrs/css/ltlh-register.css
@@ -1,5 +1,7 @@
 /*去除轮廓线*/ 
-a:focus,.btn:focus,input:focus,input[type=checkbox]:focus,input[type=submit]:focus {outline: none !important;text-decoration: none !important;}
+a:focus,.btn:focus,input:focus,input[type=checkbox]:focus,input[type=submit]:focus {outline: none !important;text-decoration: none !important }
+/*取消选中状态*/
+.vip-log .log-in-subBut > label { -ms-user-select: none; -webkit-user-select: none; -moz-user-select: none }
 
 * { margin: 0; padding: 0 }
 a { text-decoration: none; color: gray }
@@ -11,6 +13,7 @@ body { font-family: "微软雅黑"; position: relative }
 .inline-block { display: inline-block }
 .float-left { float: left }
 .re-bg { width: 100%; height: 100%; background: url(../images/ltlh/register-bg.jpg) center/cover no-repeat; position: fixed; left: 0; top: 0; z-index: 1 }
+.log-bg { background: url(../images/ltlh/log-in-bg.jpg) center/cover no-repeat }
 .detail { width: 100%; position:absolute; left: 0; top: 0; z-index: 2 }
 /*register-head*/
 .re-c-head { padding-bottom: 24px; height: 106px }
@@ -47,16 +50,40 @@ body { font-family: "微软雅黑"; position: relative }
 .re-content span:lang(c-right-span) > p:lang(user-margin) a { margin-left: 6px; width: 100px; line-height: 36px; text-align: center; background-color: #2c788a; border-radius: 3px; color: white; letter-spacing: 2px; transition: all .5s }
 .re-content span:lang(c-right-span) > p:lang(user-margin) a:hover { background-color: #26a0bd }
 .re-content span:lang(c-right-span) > p:lang(user-margin) a:focus { background-color: #16859f }
-.re-content span:lang(c-right-span) > p:lang(user-link) { padding: 10px 0 0 74px; }
+.re-content span:lang(c-right-span) > p:lang(user-link) { padding: 10px 0 0 74px }
 .re-content span:lang(c-right-span) > p:lang(user-link) a { margin-right: 36px; width: 45px; text-align: center; color: white; font-weight: bold }
 .re-content span:lang(c-right-span) > p:lang(user-link) i { width: 45px; height: 46px }
 .re-content span:lang(c-right-span) .user-icon-1 { background: url(../images/ltlh/ltlh-register-icon.png) left -26px }
 .re-content span:lang(c-right-span) .user-icon-2 { background: url(../images/ltlh/ltlh-register-icon.png) left -71px no-repeat }
-	/*register-content-text*/
+	/*register-content-test*/
 	.re-content .checking-span { width: 332px; position: absolute; left: 0; bottom: -34px; font-size: 12px; color: #1c3e56 }
 	.re-content .checking-icon { display: inline-block; width: 15px; height: 16px; position: absolute; right: -28px; top: 12px } 
 	.re-content .chacking-icon-1 { background: url(../images/ltlh/ltlh-register-icon.png) -41px top }
 	.re-content .chacking-icon-2 { background: url(../images/ltlh/ltlh-register-icon.png) -26px top }
+/*log-in*/
+.vip-log { margin: 0 auto; position: relative; text-align: left }
+.vip-log > div { padding: 24px 24px 0; position: absolute; right: 0; top: 0; width: 374px; height: 400px; border-radius: 10px }
+.vip-log .vip-log-bg { background: url(../images/ltlh/log-in-opacity-bg.png); z-index: 1 }
+.vip-log .vip-log-content { box-shadow: 6px 6px 9px -9px; z-index: 2 }
+.vip-log > div strong { display: block; margin-bottom: 32px; line-height: 50px; border-bottom: solid 2px #d0d0d0; font-size: 24px; color: white }
+.vip-log > div form > span { display: inline-block; width: 100% }
+.vip-log > div form > span > div { line-height: 46px }
+.vip-log .test-head { font-size: 18px; color: #333 }
+.vip-log .test-head span { display: inline-block; margin-left: 16px; line-height: inherit; font-size: 14px; color: #f91605 }
+.vip-log .test-input { height: 46px; background: white url(../images/ltlh/ltlh-register-icon.png) no-repeat;  border: solid 1px white; border-radius: 6px; transition: border .5s }
+.orange-border { border-color: #d9a256 !important }
+.vip-log .test-input input { margin-left: 54px; width: 304px; height: 30px }
+.vip-log .text-input-icon1 { background-position: left -116px }
+.vip-log .text-input-icon2 { background-position: left -162px }
+.vip-log .log-in-subBut { margin-top: 32px; line-height: 50px }
+.vip-log .log-in-subBut > input { float: left; width: 178px; height: 50px; border-radius: 6px; font-size: 22px; color: white; background-color: #104e9a; letter-spacing: 4px; cursor: pointer; transition: all .5s }
+.vip-log .log-in-subBut > input:hover { background-color: #0f5fc2 }
+.vip-log .log-in-subBut > input:focus { box-shadow: 5px 8px 7px 2px #043C83 inset }
+.vip-log .log-in-subBut > label { margin-left: 22px; color: #555; cursor: pointer }
+.vip-log .log-in-subBut > label input { margin-right: 12px }
+.vip-log .log-in-registerA a { float: right; color: #ff4e00; position: relative; padding-right: 20px }
+.vip-log .log-in-registerA a:after { display: inline-block; content: ""; width: 17px; height: 14px; background: url(../images/ltlh/ltlh-register-icon.png) left -208px; position: absolute; right: 0; top: 4px }
+	
 /*register-foot*/
 .re-c-footer { position: fixed; left: 0; bottom: 0; width: 100%; height: 84px; line-height: 84px; text-align: center }
 .re-c-footer > span { overflow: hidden; font-size: 12px; color: #999 }
