--- a/mobile/App/css/m-index.css
+++ b/mobile/App/css/m-index.css
@@ -44,8 +44,7 @@ nav.logo span a { color: white }
 .function > div > a span { display: inline-block; width: 6.1rem; max-width: 7.5rem; font-size: 1rem; color: #323232; position: absolute; left: 50%; margin-left: -3.05rem; bottom: -1.6rem }
 
 .notice { height: 3rem; line-height: 3rem; background-color: #fff5f5; overflow: hidden }
-.notice > i { margin: .9rem 1.4rem 0 1.8rem; display: inline-block; width: 1.4rem; height: 1.2rem; background: url(../images/kj-mobile/m-kj-iconHron.png) center/cover no-repeat;
-}
+.notice > i { margin: .9rem 1.4rem 0 1.8rem; display: inline-block; width: 1.4rem; height: 1.2rem; background: url(../images/kj-mobile/m-kj-iconHron.png) center/cover no-repeat }
 .notice > ul { list-style: none; left: 4.6rem; width: 24.2rem; height: inherit; line-height: inherit; font-size: 1rem; color: #646464 }
 
 .sign { padding: .8rem 0 5.65rem; background-color: #f0f0f0 }
@@ -105,6 +104,9 @@ nav.logo span a { color: white }
 @media only screen and (min-width: 481px) and (max-width: 561px) {
 	.demo { transform: scale(.9); right: 1rem; bottom: -.3rem }
 }  
+@media only screen and (max-width: 320px) {
+	.demo { right: -1.9rem !important }
+}
 
 
 
